<resources>
    <string name="app_name">kamsh</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="my_contests">My Contests</string>
    <string name="name">NAME</string>
    <string name="start">START</string>
    <string name="end">END</string>
    <string name="future_contests">Future Contests</string>
    <string name="active_contests">Active Contests</string>
    <string name="select_type">Select Type</string>
    <string name="starts_at">Starts At:</string>
    <string name="dd_mm_yy_00_00">dd/mm/yy 00:00</string>
    <string name="ed">Ends At:</string>
    <string name="date">hh:mm:yyyy\\nhh:mm</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_sign_up_here">New User?? Sign Up Here!!</string>
    <string name="username">Username</string>
    <string name="score">Score</string>
    <string name="contest_info">Contest Info</string>
</resources>
