<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="70dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_contests"
        android:layout_marginTop="6dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:id="@+id/my_contests"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/grey"
        android:layout_marginTop="32dp"
        android:layout_marginStart="3dp"
        android:id="@+id/view"
        android:layout_marginEnd="3dp"
        android:layout_height="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/name"
            android:layout_marginStart="20dp"
            android:selectAllOnFocus="false"
            android:linksClickable="false"
            android:textStyle="bold"
            android:autoLink="all"
            android:layout_centerVertical="true"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/start"
            android:textStyle="bold"
            android:layout_marginEnd="100dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/end"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dp"
        android:id="@+id/dummy"
        android:layout_alignBottom="@+id/view"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_alignTop="@+id/dummy"
        android:id="@+id/recyclerView"
        android:layout_marginEnd="3dp">

    </android.support.v7.widget.RecyclerView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dp"
        android:id="@+id/dummy1"
        android:layout_alignBottom="@+id/recyclerView"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active_contests"
        android:layout_marginTop="6dp"
        android:layout_alignTop="@+id/dummy1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:id="@+id/active_contests"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/grey"
        android:layout_marginTop="25dp"
        android:id="@+id/view2"
        android:layout_marginStart="3dp"
        android:layout_alignTop="@+id/active_contests"
        android:layout_marginEnd="3dp"
        android:layout_height="40dp">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/name"
        android:layout_marginStart="20dp"
        android:selectAllOnFocus="false"
        android:linksClickable="false"
        android:textStyle="bold"
        android:autoLink="all"
        android:layout_centerVertical="true"
        android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/start"
            android:textStyle="bold"
            android:layout_marginEnd="100dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/end"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dp"
        android:id="@+id/dummy3"
        android:layout_alignBottom="@+id/view2"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerView1"
        android:layout_marginStart="3dp"
        android:layout_alignTop="@+id/dummy3"
        android:layout_marginEnd="3dp">
    </android.support.v7.widget.RecyclerView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dummy4"
        android:layout_alignBottom="@id/recyclerView1"
        android:layout_marginBottom="-20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/future_contests"
        android:layout_alignTop="@id/dummy4"
        android:layout_marginTop="6dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:id="@+id/future_contests"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/grey"
        android:layout_marginTop="32dp"
        android:layout_marginStart="3dp"
        android:id="@+id/view3"
        android:layout_alignTop="@id/dummy4"
        android:layout_marginEnd="3dp"
        android:layout_height="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/name"
            android:layout_marginStart="20dp"
            android:selectAllOnFocus="false"
            android:linksClickable="false"
            android:textStyle="bold"
            android:autoLink="all"
            android:layout_centerVertical="true"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/start"
            android:textStyle="bold"
            android:layout_marginEnd="100dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/end"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dp"
        android:id="@+id/dummy5"
        android:layout_alignBottom="@+id/view3"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_alignTop="@+id/dummy5"
        android:id="@+id/recyclerView2"
        android:layout_marginEnd="3dp">

    </android.support.v7.widget.RecyclerView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dp"
        android:id="@+id/dummy6"
        android:layout_alignBottom="@+id/recyclerView2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Past Contests"
        android:layout_marginTop="6dp"
        android:layout_alignTop="@+id/dummy6"
        android:textSize="16sp"
        android:textStyle="bold"
        android:id="@+id/past_contests"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/grey"
        android:layout_marginTop="25dp"
        android:id="@+id/view4"
        android:layout_marginStart="3dp"
        android:layout_alignTop="@+id/past_contests"
        android:layout_marginEnd="3dp"
        android:layout_height="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/name"
            android:layout_marginStart="20dp"
            android:selectAllOnFocus="false"
            android:linksClickable="false"
            android:textStyle="bold"
            android:autoLink="all"
            android:layout_centerVertical="true"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/start"
            android:textStyle="bold"
            android:layout_marginEnd="100dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/end"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dp"
        android:id="@+id/dummy7"
        android:layout_alignBottom="@+id/view4"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerView3"
        android:layout_marginStart="3dp"
        android:layout_alignTop="@+id/dummy7"
        android:layout_marginEnd="3dp">
    </android.support.v7.widget.RecyclerView>
    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        fab:menu_animationDelayPerItem="50"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="#DA4336"
        fab:menu_colorPressed="#E75043"
        fab:menu_colorRipple="#99FFFFFF"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_labels_colorNormal="#333333"
        fab:menu_labels_colorPressed="#444444"
        fab:menu_labels_colorRipple="#66FFFFFF"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="0dp"
        fab:menu_labels_paddingBottom="4dp"
        fab:menu_labels_paddingLeft="0dp"
        fab:menu_labels_paddingRight="0dp"
        fab:menu_labels_paddingTop="4dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="#FFFFFF"
        fab:menu_labels_textSize="14sp"
        fab:menu_openDirection="up"
        fab:menu_shadowColor="#66000000"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="3dp"
        fab:menu_showShadow="true">
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/host"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            fab:fab_size="mini"

            android:clickable="true"
            android:onClick="onClick"
            android:src="@drawable/ic_add_circle_outline_black_24dp"
            fab:fab_label="Host Contest" />

        <com.github.clans.fab.FloatingActionButton

            android:id="@+id/stats"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="40dp"
            android:clickable="true"
            fab:fab_size="mini"
            android:onClick="onClick1"
            android:src="@drawable/ic_show_chart_black_24dp"
            fab:fab_label="My Stats" />

    </com.github.clans.fab.FloatingActionMenu>
</RelativeLayout>