<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/circularImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="false"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="55dp"
                android:src="@drawable/poster" />

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignTop="@+id/circularImageView"
                android:layout_alignEnd="@id/circularImageView"
                android:layout_alignParentTop="false"
                android:layout_alignParentEnd="false"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/border"
                android:onClick="onClick"
                app:srcCompat="@drawable/ic_add_circle_outline_24dp"
                tools:layout_editor_absoluteX="172dp"
                tools:layout_editor_absoluteY="111dp" />
            <RelativeLayout
                android:id="@+id/view"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="false"
                android:layout_alignTop="@id/circularImageView"
                android:layout_marginTop="120dp"
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/border1"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/tex"
                    android:text="@string/select_type"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"
                    />
                <Spinner
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:background="@color/white"
                    android:popupBackground="@color/white"
                    android:spinnerMode="dropdown"
                    android:theme="@style/ThemeOverlay.AppCompat.Light"
                    ></Spinner>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:id="@+id/textInput1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="45dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Contest Name"
                        android:background="@drawable/edittext1"
                        android:id="@+id/name"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:inputType="textPersonName"
                        android:textColorHint="@color/black"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/textInput1"
                android:layout_marginStart="20dp"
                android:id="@+id/dummy"
                android:textColor="@color/black"
                android:text="@string/starts_at"
                android:textSize="16sp"
                android:layout_marginTop="45dp"/>
                <EditText
                    android:layout_width="105dp"
                    android:layout_marginEnd="100dp"
                    android:layout_alignParentEnd="true"
                    android:layout_height="30dp"
                    android:background="@drawable/edittext1"
                    android:textSize="15sp"
                    android:id="@+id/startdate"
                    android:textColor="@color/black"
                    android:layout_marginTop="35dp"
                    android:layout_alignTop="@id/textInput1"
                    android:hint="dd/mm/yyyy"/>
                <EditText
                    android:layout_width="60dp"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_height="30dp"
                    android:background="@drawable/edittext1"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="35dp"
                    android:id="@+id/starttime"
                    android:layout_alignTop="@id/textInput1"
                    android:hint="hh:mm"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/dummy"
                    android:layout_marginStart="20dp"
                    android:id="@+id/dummy1"
                    android:textColor="@color/black"
                    android:text="@string/ed"
                    android:textSize="16sp"
                    android:layout_marginTop="35dp"/>
                <EditText
                    android:layout_width="105dp"
                    android:layout_marginEnd="100dp"
                    android:layout_alignParentEnd="true"
                    android:layout_height="30dp"
                    android:background="@drawable/edittext1"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="30dp"
                    android:id="@+id/enddate"
                    android:layout_alignTop="@id/dummy"
                    android:hint="dd/mm/yyyy"/>
                <EditText
                    android:layout_width="60dp"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_height="30dp"
                    android:background="@drawable/edittext1"
                    android:textSize="15sp"
                    android:id="@+id/endtime"
                    android:textColor="@color/black"
                    android:layout_marginTop="30dp"
                    android:layout_alignTop="@id/dummy"
                    android:hint="hh:mm"/>
                <EditText
                    android:id="@+id/des"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_alignTop="@id/dummy1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/edittext"
                    android:gravity="top|left"
                    android:hint="Contest Description"
                    android:inputType="textPersonName|textMultiLine"
                    android:maxLines="1000"
                    android:singleLine="false"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="15sp" />
                <EditText
                    android:id="@+id/prizes"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_alignTop="@id/des"
                    android:layout_marginBottom="25dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="220dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/edittext"
                    android:gravity="top|left"
                    android:hint="Prizes to be given"
                    android:inputType="textPersonName|textMultiLine"
                    android:maxLines="1000"
                    android:singleLine="false"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="15sp" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
